# Proyect1

./: README.md  main.py  pyproject.toml
