[tool.poetry]
name = "proyect1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.3.1"
streamlit = "^1.47.0"
plotly-express = "^0.4.1"
plotly = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
